--- a/_units/09.md
+++ b/_units/09.md
@@ -1,18 +1,20 @@
 ---
 ###
 # unit information: 
-# Fill out with relevant information for this unit
+# Unit 9: Scale and Harmony
 ###
-title: Title of the unit
-number: 0
+title: Scale and Harmony
+number: 9
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
  - author 1
 topics: [topic 1, topic 2]
 test_questions:
- - question 1
- - question 2
+ - How does temperament affect harmony and harmonic progression?
+ - Describe the differences and similarities between harmony and timbre.
+ - What are some ways in which recent composers have sought to create tension and release in music without going back to the tonal system of the past?
+ - Why is the context in which a sonority appears important?
 
 ###
 # page layout:
@@ -25,6 +27,182 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# Section 1
+# Introduction
+Webster's dictionary defines harmony as
+*
+1. the combination of simultaneous musical notes in a chord 
+1. the structure of music with respect to the composition and progression of chords 
+1. the science of the structure, relation, and progression of chords
++ pleasing or congruent arrangement of parts
+
+http://www.m-w.com
+
+As we can see from the above definition, the word harmony often refers to either a chord, a progression of chords, or a consonant  (or generally speaking, pleasing) sonority.  The task of defining harmony is a difficult one—is it a chord or a progression of chords?  How are harmony and harmonic progression different from timbre and timbral evolution?  In this unit, we will discuss these questions and look at how composers in the 20th and 21st centuries view harmony.  We will also look at the effects that tuning systems have on harmony.
+
+# Historical View of Harmony
+
+The term harmony comes from a Greek word that translates literally as "means of joining" and is related to the word for joint or shoulder [http://www.etymonline.com/index.php?term=harmony].  In ancient Greek music, the term referred to the juxtaposition of different elements, but since the musical practice of the time did not include the simultaneous sounding of multiple notes, this concept was only used as a way of discussing the theoretical relationships between pitches.  In the Medieval period, composers began to write music in which two notes that formed a perfect consonance (fourths, fifths, or octaves) were sung simultaneously, and in the Renaissance Gioseffo Zarlino wrote of triadic harmony that included the imperfect consonances:  thirds.  These descriptions pertain only to the structure of an isolated simultaneity, although it is clear that as far back as the 15th century, theorists understood the concept of harmony to encompass not only the relationships between simultaneously sounded pitches, but the relationships between chords.  Additionally, some theorists have considered harmony to be the progression through, and alternation of, consonant and dissonant sonorities.  
+
+The distinction between harmony and harmonic progression is an important one.  Consider, for example, the C major chord in figure 1.
+
+cmaj.png
+
+Figure 1.  C major triad.
+
+In the key of C major, this chord has a feeling of stability since it is the tonic of the key.  However, in the key of F major, the same chord will sound unstable as if it should move to F.  As we can see, the context in which a chord appears is important.  Another example is the famous "Tristan chord"—the opening harmony of Richard Wagner's opera Tristan und Isolde (figure 2).  The nature of this sonority has been debated for decades, but the debate centers less around the chord itself, and more around the function and way in which it resolves.
+
+tristan.png
+Wagner_Tristan_opening.midi 
+
+The chord can easily be explained as a half-diminished seventh chord or as a French augmented 6th chord where the G# is an appoggiatura  to the A, however, the way in which it resolves does not support either of these labels.
+
+# Tuning and Temperament
+
+Since the time of J.S. Bach, equal-temperament has dominated western classical music.  In this system, every semitone is of equal size in log-frequency (remember that our perception of pitch is logarithmic).  For a given number of semitones, n, we can calculate the frequency from a reference f_r using the formula
+
+equal-temperament.png.
+
+Although a thorough discussion of tuning is beyond the scope of this unit (Wikipedia has numerous pages and links devoted to the topic), we can say a few things about equal temperament and the systems that it replaced.
+
+Any tuning system must be measured against just intonation in which intervals are calculated by integer ratios, e.g. a just fifth is 3 / 2, a just fourth is 4 / 3, and a just major third is 5 / 4.  Although the just intervals are considered by many to be the most pleasing, they can lead to complex problems.  For example, a just major third above A1 (55 Hz) is 68.75 Hz, but if we use 55 Hz (A1) as our reference frequency and calculate a C#1 by going up in fifths, we arrive at 69.609375 (55 • 1.5 = 82.5 (E2) • 1.5 = 123.75 (B2) • 1.5 = 185.625 (F#3) • 1.5 = 278.4375 (C#4) / 4 = 69.609375).  One solution to this problem is to tune certain keys as perfectly as possible and allow other more distant keys to be out of tune.  Equal temperament solves the problem by making every interval (with the exception of the octave) slightly out of tune.  For example, in the case of perfect fifths, in equal temperament,
+
+eq5.png
+
+and in just intonation, 
+
+
+j5.png.
+
+An important technique that defines common practice music is the modulation to distant keys.  As the harmony moves away from the home key, tension increases, however, in a tuning system where the tonic key is tuned near just intonation and the degree to which a key is out of tune increases with the distance from the home key, modulation to distant keys results in a higher level of tension.  In the following listening example, you will hear the first minute of a Capriccio (FbWV 506) by Johann Jakob Froberger (1616-1667) played by Gustav Leonhardt on a harpsichord tuned to Baroque pitch and in a tuning other than equal temperament (most likely meantone temperament).  In the second listening example, you will hear the same passage, but played on a piano in equal temperament.  Pay special attention to bars 7 and 8.
+
+froberger-capriccioInCmaj.mp3 
+Listening example 1.  The first minute of Capriccio (FbWV 506) by Johann Jakob Froberger played on a harpsichord in a tuning system other than equal temperament by Gustav Leonhardt.
+
+froberger-capriccioInCmaj.mid 
+Listening example 2.  Froberger's Capriccio played in equal temperament.
+
+froberger-capriccioInCmaj.png
+Figure 2.  Bars 1-12 of Capriccio (FbWV 506) by Johann Jakob Froberger.
+
+Download the following patches which will allow you to explore different tuning systems.
+
+[NOTE--THERE WILL BE TWO PATCHES HERE]
+
+ratio-to-freq-ss.png
+
+# Period Tunings
+Tunings where all thirds and fifths are just can not exist mathematically, therefore are tunings are compromises:
+- Just-intonation tuning
+- Pythagorean tuning
+- Mean-tone tuning
+- Werckmeister
+- Valotti and many more
+
+# Microtonality
+The term microtonality refers to the systematic exploration of tonal relationships that can not be derived from our tempered or quasi-tempered tuning. By comparison with the steps of the 12-tone tempered tuning (also called 12TET = "12-tone equal temperament”), in microtonal tunings deviations are smaller than 100 cents are common. Hence the term microtonality.
+[Scala Archive]
+
+There are two schools of thought:
+
+## Just Intonation
+The representatives of this movement, established by American composer Harry Partch ("Genesis of a Music"), focus on the intervals that can be derived from the overtone series and their inversion (undertone series). In the process, rather unusual intervals such as 11/7 or 7/3 come to the center of attention.
+
+Figure Arrangement of wooden bars in Harry Partch's marimba in just intonation (11-limit)
+
+## Equal Temperament 
+### Divisions of the Whole Tone
+The need for small subdivisions of the whole tone into four (24TET) and six (36TET) was already theorized and practiced at the beginning of the 20th Century (Busoni, Haba, Wishnegradsky, Ives). The Mexican composer Julian Carrillo patented in 1940 a piano with 16th notes (96TET). The 72-level, ekmelic tuning closely approximates most of the harmonic overtones, 
+
+### Other Divisions of the Octave
+53TET is derived from the layering of 53 fifths. 53 fifths correspond to 31 octaves in a very good approximation (see next slide). Interesting are also tuning systems in which a diatonic tone set exists, such as at 17TET, 19TET, 22TET, 31TET (mean-tone tuning) and 41TET. 
+
+These systems obey the following rule: 5 * m * s + 2 * n * s = 1200, where s is the step size of the system, and m and n are the integer factors with which s must be multiplied by to achieve a whole tone or semitone, resp. 
+
+This also applies: 5 * m + 2 * n = number of steps in the tuning. 
+The following condition should also be met: 694 cents <(3 * m + n) * s <710 cents.
+
+For 12TET: m = 2 and n = 1,
+For 17TET: m = 3 and n = 1,
+For 19TET: m = 3 and n = 2,
+For 22TET: m = 4 and n = 1,
+For 31TET: m = 5 and n = 3,
+For 41TET: m = 7 and n = 3.
+
+Figure Calculation of the 53-step equidistant tuning in Max
+
+### Divisions of Other Intervals 
+In addition to the octave, of course, other intervals can be divided. 
+#### Bohlen-Pierce Scale
+An example is the Bohlen-Pierce scale, which was discovered and described in 1978 by engineer Heinz Bohlen. This scale divides the just twelfth (3: 1) into thirteen equal steps and has a tone set containing a striking number of intervals of odd ratios such as 5: 3, 7: 5, 7: 3, 9: 7 and 9: 5 , These intervals are also included in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? http://www.sfoxclarinets.com/bpclar.html.
+
+Figure BP Scale
+
+Figure BP Soprano Clarinet
+
+Bohlen-Pierce Microtonality
+
+#### Carlos Alpha
+
+## Other Scales
+Another class of tunings can not be classified into one group or the other. This includes the Indonesian pelog (gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used. It is likely that these tunings follows the need to minimize the sensory dissonance of the mainly inharmonic sounds of the gamelan orchestra. (The other scale commonly used in gamelan music, Slendro, is characterized by a quasi-equidistant 5-tone scale.)
+
+Figure Dissonance Curve 
+Figure Gamelan Orchestra
+
+# Harmony in the 20th/21st Centuries
+
+## Tension and Release
+
+The progression of harmony from consonance through dissonance and back to consonance can be abstracted and seen as a buildup of tension and a release of that tension.  The serialist composers of the post-war period (Boulez, Stockhausen, etc.) gave up the ability to create tension and release through harmonic progression as they abandoned the sonorities and harmonic syntax of the past.  The generation to follow (Grisey, Murail, Saariaho) sought new ways of creating tension and release without returning to the rules of the past.  In her article Timbre and harmony: interpolations of timbral structures, Kaija Saariao proposes a "sound / noise axis" that could replace the tonal system of consonance / dissonance as a way of creating tension and release.  This is hear clearly in the opening seconds of her composition Nymphea for string quartet and electronics—here, the performers alternate between normal playing and noisy extended techniques such as playing on the bridge (listening example 3).  
+
+saariaho-nymphea-beg.mp3 
+Listening example 3.  The opening minute of Kaija Saariaho's Nymphea for string quartet and electronics.
+
+[PAGE FROM SCORE HERE]
+
+In works such as Gérard Grisey's Partiels and Tristan Murail's Gondwana, the composers create a relationship between harmonicity and inharmonicity.  In this case, the concept of harmonicity refers to similarity to the harmonic series.  In Partiels, the opening sonority—a harmonic series derived from the acoustical analysis of a bass trombone—is gradually transformed into an increasingly inharmonic sonority by gradually placing the highest pitches into lower octaves.  In figure xx, the top graph is a sonogram of the opening 2'30" of Partiels and the bottom is a plot of the roughness (see the unit on consonance and dissonance) of the sonority over time created using a modified version of Richard Parncutt's algorithm.  
+
+partials1-roughness.png
+Figure 3.  The top plot is a sonogram of the first 3'40" of Grisey's Partiels and the bottom plot is roughness against time.
+
+Partiels_first-section.mp3 
+Listening example 4.  The first 3'40" of Grisey's Partiels.
+
+Although Grisey uses a very different system of harmony in Partiels, one can still see a constant transition between consonance and dissonance or tension and release.  About this issue, the composer writes in his own words:
+
+	Two traits characterize the development of sounds:  periodicity and the overtone spectrum.  These elements, which are very easy to identify, 	give the piece continuity and a dynamic that corresponds rather closely to the cyclical form of human respiration:  inhalation, exhalation and 	rest or tension / collapse — relaxation — collection of energy.
+
+In the following demo, the roughness of a sound file can be calculated in realtime.  Download the first section of Partiels here (Partiels_first-section.aiff) to watch and listen to it in realtime.
+
+roughness-max-screenshot.png
+
+[A BETTER PATCH IS COMING SOON]
+
+# Harmony, Timbre and Transformation
+
+The opening section of Partiels raises an interesting question:  is there a difference between a chord and a timbre?  In this case, it would seem that Grisey constructed a chord out of the elements of a timbre.  But, if a timbre is made up of a series of pitches, how is it different from a chord?  In most western classical music prior to the 20th century, harmony and timbre were considered two separate elements—the orchestration of a sonority could be done in many different ways and was often considered a subjective, surface-level detail.  However, in the 20th century, composers such as Olivier Messiaen began to think of timbre and harmony as inseparable, and it is likely that Grisey would refer to the opening sonority of Partiels as a timbre rather than a chord.  
+
+A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.  In the past, harmonic change and movement to new key areas was largely a discrete event, however, here, by only changing a few notes at a time by placing them in different octaves, Grisey creates a smooth transformation from one sonority to another.  Recently, David Wessel has developed a Max/MSP (http://www.cycling74.com) object that facilitates gradual timbral transformation.  Here, a timbre is created using a large bank of sinusoidal oscillators and a gradual transformation to a new timbre is done by changing the frequency of one oscillator at a time.  Download the following patch to experiment with different timbral transformations.
+
+
+[NOTE--THIS IS A SCREENSHOT OF THE HELP PATCH.  A REAL DEMO IS COMING ASAP]
+
+migrator-ss.png
+
+# References
+
+G. Grisey. Tempus ex machina: a composer’s reflections on musical time. Contemporary Music Review, 2(1):239–276, 1987.
+R. Parncutt. Harmony: A Psychoacoustical Approach. Springer-Verlag, Berlin, 1989.
+K. Saariaho. Timbre and harmony: Interpolations of timbral structures. Contemporary Music Review, 2(1):93–134, 1987.
+D. Wessel.  Timbre space as a musical control structure.  xenakis.ircam.fr/articles/textes/Wessel78a/, 1978.
+
+# Links and Downloads
+
+The max patches for the unit can be downloaded here:  max.zip 
+
+Grove Dictionary of Music and Musicians:  http://www.grovemusic.com
+Merriam-Webster Dictioinary:  http://www.m-w.com
+Wikipedia has many pages dedicated to issues of tuning and temperament:  http://en.wikipedia.org/wiki/Musical_temperament
+
 
 {% include unit_postamble.md %}
