--- a/_units/08.md
+++ b/_units/08.md
@@ -1,18 +1,20 @@
 ---
 ###
 # unit information: 
-# Fill out with relevant information for this unit
+# Unit 8: Cognitive Psychology and Music
 ###
-title: Title of the unit
-number: 0
+title: Cognitive Psychology and Music
+number: 8
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
  - author 1
 topics: [topic 1, topic 2]
 test_questions:
- - question 1
- - question 2
+- What are the Gestalt processes of visual perception? How do they relate to melody?
+- What are the relative advantages of generating melodies as a matrix of conditional probabilities?
+- To what extent is melodic contour important to our musical experience?
+- What are the axes of a musical texture space? How does it categorize different musical genres?
 
 ###
 # page layout:
@@ -25,6 +27,149 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# Section 1
+# Introduction
+
+What does cognitive psychology have to do with sounds and music?
+- Long chain of stimulus processing
+- Generation of energy by an external object or event
+- Transmission of this energy through the space between the event and the observer
+- Recording and processing by the perceptive apparatus of the observer
+- Transmission of the signal to the brain and further processing
+- ...
+- Formation of a representation of the event in the brain
+
+Sensory information has relevance only if the brain can form a representation of the external world from it. During their processing stimuli often have little in common with what is perceived by the observer, as this is the result of further extensive processing in the brain. Regardless of the nature of the mind (eye, ear) - a topic of psychophysics and physiology - cognitive psychologists are interested in exploring the mechanisms of internal representation. The senses must come together to represent the outer world.
+An evolutionary process has shaped our cognitive processes to be automatic, immediate and efficient. We have few options to consciously influence it.
+
+Figure Table Surfaces
+
+The example shows that the internal representation of an object can differ greatly from the physical stimulus on the retina. In fact, both table surfaces (parallelograms) are identical (http://www.michaelbach.de/ot/sze_shepardTables/index.html). However, the fact that the lines are interpreted as part of a three-dimensional object creates the impression that the tables are different.
+
+In this unit we will discuss the perception and cognition of melody. 
+A melody is defined as a series of pitches presented in succession. (This is in contrast to simultaneously presented pitches, which defines harmony as discussed in the previous unit.) From a perceptual perspective, much of the importance of melody lies in the relationships between successive pitches in a melody, i.e. interval sizes and directions. Models of interval sizes, such as ImplicationRealizationModel, GapFill, and Gestalt theories, are closely related to expectation. At a larger scale, the overall pattern of the melody, as dictated by the melodic contour, plays a crucial role in melodic perception. Knowledge in the statistical processes that generate melodies, such as HiddenMarkovModels, can be useful in composition, especially given its potential in the automatic composition of large sets of melodies. 
+The combination of melodies gives rise to musical texture, and the creation of musical texture requires attention not only to each melody in itself, but to the interactions between melodies. The rules of voice leading can be derived from a perceptual TextureSpace, which can represent groups of melodies and generate predictions for distinct musical styles.
+
+# Unconscious Inference
+
+Hermann von Helmholtz (1821-1894) is considered by some to be the greatest perceptual physiologist and psychologist of all time. He coined the term Unconscious Inference. Our brain infers three-dimensional objects based on clues found in the two-dimensional patterns on the retina without any conscious effort.
+
+Such clues include:
+
+• Linear perspective: e.g. converging lines indicate parallelism and depth in 3 dimensions
+• Size gradient: elements of a similar pattern become smaller towards the horizon
+• Aerial perspective: distant objects appear bright and blue
+• Binocular disparity: each of the two eyes gets a slightly different image, from which the brain can draw conclusions about the relative distance of the contained objects
+• Motion Parallax: moving the observer shifts the image on the retina. This makes it possible to draw conclusions about distances.
+
+# Constancy of Size and Loudness
+The size of an object on the retina changes with the distance to the observer. Nevertheless, we have developed the ability to perceive the size of an object independently of its distance. We call this phenomenon constancy of size. When listening, we find the phenomenon of volume constancy as an analogy to size constancy.
+Example in the sound domain: The difference between quieter and farther away. The energy that an instrument emits is ideally evenly distributed over a spherical surface. As a result, the intensity reaching the listener decreases with the square of the distance. Visual Analogy: Balloon that either flies away or loses size. So we need other clues to decide about the nature of the process:
+1. When an instrument plays quietly, the tone changes noticeably
+1. Normally a sound is reflected by other objects in the room. This creates reverb, which gives information about the size of the room. When a sound is close, we hear more direct sound and little reverb that hits with a time delay. As the sound fades away, its intensity decreases and reverb increases.
+
+# Spatial and Temporal Inversion
+The perception of objects can be confusing if the spatial or temporal order is reversed, as in the case of the double faces in this image, which we interpret in a specific, fixed way (this definition takes place in early childhood). The same applies to reverberated sounds, where we first expect the sound and then virtual copies of the sound. A reversal leads to unexpected results, for example, gun shots in Georg Hajdu's opera Der Sprung.
+
+# Completion
+Completion of incomplete information (e.g., blind spot or TV noise experiments). Top-down in addition to bottom-up processes, based on experience. Computers have difficulty to deal with ambiguity for lack of visual knowledge.
+
+In the example on the left, as with any reason, the elongated object continues under the round disk. Even infants make such assumptions and are surprised if they do not apply.
+
+# Subjective Contour
+A similar phenomenon is the subjective contour. It is difficult not to see that white triangle, though it does not actually exist.
+
+# Gestalt Laws of Grouping
+According to Max Wertheimer, the co-founder of Gestalt psychology, the brain uses the principles of Gestalt grouping of sensory stimuli to shape objects, especially if the incoming information is incomplete.
+The principles include:
+Symmetry (symmetry): a
+Similarity: b
+Proximity: c
+Closure: d
+Continuity (good continuity): e
+Common fate: f
+
+# Melody
+## MelodicContour
+
+Contour generally refers to the pattern of directions for pitch intervals. The series of upward and downward pitch intervals can be represented as patterns of transitions between notes. Thus, in the following example of a melody from Joplin's The Entertainer:
+
+In this melody, each interval can be represented as its direction - up, down, or same. The series of interval directions are:
+
+Thus, the contour of the Entertainer melody can be represented as:
+
+Contour is shown to be very important to the perception of melody. Deutsch (2003) demonstrates that when the contour of a melody is intact, melodies can be heard even if the pitches themselves are incorrect. (This explains why a tune is often still recognizable even when performed grossly out of tune.) If the contour is disrupted, then the melodic recognition is impaired, even when the pitch classes are retained. 
+The following demonstration (from Deutsch's 2003 CD Musical Illusions and Paradoxes) illustrates the importance of melodic contour. In the first sound file, a familiar melody is played in the correct pitch classes but in scrambled octaves, such that the melodic contour is disrupted. Can you recognize the melody? 
+ Scrambled melody (source: http://www.philomel.com/) 
+Original, unscrambled melody (source: http://www.philomel.com/) (source: http://www.philomel.com/)
+
+## Implication Realization Model
+
+Narmour's Implication Realization Model (1989, 1990) provides a set of predictions for melodic structure. In particular, the IR model looks at interval sizes and directions between notes of a melody. In the IR model, when given three notes making two intervals, the first interval is defined as the Implication interval, whereas the second interval is the Realization interval. 
+ Definitions of the IR model. 
+The space of all possible pairs of Implied and Realized intervals. Implied intervals, with possible sizes ranging from 0 (same note) to 11 semitones (major seventh) are plotted on the Y axis. Realized intervals, ranginng from 12 semitones in a different direction to 12 semitones in the same direction, are plotted on the X axis. Each possible IR pair can be represented as a square in the grid. 
+ (image source: Krumhansl, 1995) 
+
+The IR model predicts these melodic principles (based on Krumhansl, 1995): 
+Registral Direction – small implication intervals are followed by realization intervals in the same direction; large implication intervals are followed by realization intervals in the opposite direction
+Intervallic Difference – small intervals imply similar-sized intervals; large intervals imply smaller intervals
+Registral Return – intervals imply similarly sized intervals in the opposite direction  (image source: Krumhansl, 1995)
+Proximity – realized intervals should be no larger than a perfect 4th.
+Closure – realized intervals tend to smaller and in the opposite direction than implied intervals.  (image source: Krumhansl, 1995)
+
+## Hidden Markov Models
+
+A melody can be generated using a Hidden Markov Model (HMM). An HMM is a chain of sequential probabilities. Each node in a Markov model occurs with a certain probability, and predicts each of the other nodes connected to it with a certain probability. 
+An example of a Hidden Markov Model can be used to predict weather:
+ (image source: here)
+A graph of an HMM is shown above. The model predicts the weather of each day given the previous day. We can see that according to this model, the probability that a day is sunny given that the previous day is also sunny is 0.8, the probability of a foggy day given to the previous foggy day is 0.5, and the probability that a rainy day is followed by another rainy day is 0.6. Each weather state also predicts each other weather state, with lower probabilities. 
+Adapted to music, HMMs can be used to generate melodies. Each interval can be a predictor of the next interval, as specified in gap fill and the IR model. 
+ (image source: here)
+
+The following interactive example is a matrix of transitions between intervals in a melody. The melody transitions matrix below generates a melody from a Hidden Markov Model:
+
+Download melody transition matrix here
+
+## Texture Space
+
+The combination of melodic material gives rise to musical texture. Huron (1989) proposes a two-dimenisonal space for musical texture, where the x-axis represents semblant motion whereas the y-axis represents onset asynchrony. 
+ Texture space for melodies.
+Here are some examples of the way melodies fit in each corner of the texture space:
+1. high semblant motion, high onset synchrony (e..g monody)
+
+2. high semblant motion, low onset synchrony (e.g. a chorale)
+
+3. low semblant motion, high onset synchrony (e.g. a canon)
+
+4. low semblant motion, low onset synchrony (e.g. polyphony)
+
+To fit all four kinds of melodic textures onto the texture space:
+
+This texture space may be used to predict different musical styles. Different genres of music tend to occupy distinct areas of texture space, as shown below:
+(image source: http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html)
+
+# Summary
+
+In this unit we have looked at several perceptual principles which give rise to our experience of melody and melodic processes. The melodic processes we discussed include interval sizes and melodic contour. The Implication-Realization Model, the gap fill principle, and the Gestalt processes of visual perception are all good predictors of the way melodies tend to unfold.
+Statistical models also play an important role in our understanding and production of melody. Melodies can be modeled as a Hidden Markov Model, or a chain of conditional probabilities. With a matrix that dictates transitions between melodic intervals, we can generate many interesting melodies with predetermined characteristics. 
+Texture arises from the confluence of multiple melodies. The axes of texture space can be defined as onset synchrony and semblant motion, and the resulting figure enables the differentiation between musical styles.
+
+# References
+
+- Diana Deutsch's CD Musical Illusions and Paradoxes.http://philomel.com
+- E. Narmour. The Analysis and Cognition of Basic Melodic Structures: The Implication-Realization Model. (Chicago: Univ. of Chicago Press. 1990)
+- Wikipedia article on Hidden Markov Models: http://en.wikipedia.org/wiki/Hidden_Markov_Model
+- Huron Tone and Voice: a Derivation of Rules of Voice-Leading. http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html
+- Krumhansl, C.L. (1995). Music psychology and music theory: Problems and prospects. Music Theory Spectrum, 17, 53-80.
+- Narmour, E. (1990). The analysis and cognition of basic melodic structures: The implication-realization model. Chicago: University of Chicago Press.
+- von Hippel, P. & Huron, D. Melodic gap-fill and regression to the mean.American Musicological Society, Northern/Central California Chapter Meeting.
+Oakland, California (1998 Feb. 7)
+
+# Links and Downloads
+
+Diana Deutsch's CD Musical Illusions and Paradoxes.http://philomel.com
+Download melody transition matrix here
+More on Gestalt processes of pattern perception: http://www.usask.ca/education/coursework/skaalid/theory/gestalt/gestalt.htm
+Huron Tone and Voice: a Derivation of Rules of Voice-Leading. http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html
+Russo & Cuddy (1999) on melodic expectancy, with sound examples: http://www.acoustics.org/press/137th/russo.html
 
 {% include unit_postamble.md %}
