--- a/_units/08.md
+++ b/_units/08.md
@@ -166,10 +166,10 @@ Oakland, California (1998 Feb. 7)
 
 # Links and Downloads
 
-Diana Deutsch's CD Musical Illusions and Paradoxes.http://philomel.com
-Download melody transition matrix here
-More on Gestalt processes of pattern perception: http://www.usask.ca/education/coursework/skaalid/theory/gestalt/gestalt.htm
-Huron Tone and Voice: a Derivation of Rules of Voice-Leading. http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html
-Russo & Cuddy (1999) on melodic expectancy, with sound examples: http://www.acoustics.org/press/137th/russo.html
+- Diana Deutsch's CD Musical Illusions and Paradoxes.http://philomel.com
+- Download melody transition matrix here
+- More on Gestalt processes of pattern perception: http://www.usask.ca/education/coursework/skaalid/theory/gestalt/gestalt.htm
+- Huron Tone and Voice: a Derivation of Rules of Voice-Leading. http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html
+- Russo & Cuddy (1999) on melodic expectancy, with sound examples: http://www.acoustics.org/press/137th/russo.html
 
 {% include unit_postamble.md %}
