--- a/_units/08.md
+++ b/_units/08.md
@@ -30,7 +30,7 @@ mathjax: true
 # Introduction
 
 What does cognitive psychology have to do with sounds and music?
-- Long chain of stimulus processing
+Long chain of stimulus processing:
 - Generation of energy by an external object or event
 - Transmission of this energy through the space between the event and the observer
 - Recording and processing by the perceptive apparatus of the observer
