improvements to the audio includes

--- a/_units/01.md
+++ b/_units/01.md
@@ -66,9 +66,27 @@ sound waves, and the ways we represent them.
 
 # Recording and Representing Sound
 
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/waveform_trombone.png" 
            description="A waveform" 
 %} {% assign fig_waveform=fignum %}
+{% endcomment %}
+
+{% include begin-audio-example %}
+{% include audio-buffer name="mybuf" src="/MUTOR/assets/audios/trombone.mp3" %}
+{% include audio-player name="player" buffer="mybuf" %}
+<table><tr><td>
+{% include begin-overlay width="600px" height="200px" %}
+{% include audio-waveform name="waveform" buffer="mybuf" %}
+{% include audio-playhead name="playhead" player="player" %}
+{% include end-overlay %}
+</td><td>
+{% include audio-meter name="meter" %}
+</td></tr><tr><td>
+{% include audio-connection outlet="player" inlet="meter" %}
+{% include audio-transport name="transport" %}
+</td></tr></table>
+{% include end-audio-example %}
 
 The image in figure {{ fig_waveform }} may be a familiar
 one---we might say we see a sound there, but it would be more accurate
