added missing curly brace that was preventing jekyll from building the site

--- a/_units/09.md
+++ b/_units/09.md
@@ -61,7 +61,7 @@ The chord can easily be explained as a half-diminished seventh chord or as a Fre
 
 Since the time of J.S. Bach, equal-temperament has dominated western classical music.  In this system, every semitone is of equal size in log-frequency (remember that our perception of pitch is logarithmic).  For a given number of semitones, n, we can calculate the frequency from a reference f_r using the formula
 
-{% include img-figure url="/MUTOR/assets/images/unit9_equal-temperament.png" description="Equal Temperament" %
+{% include img-figure url="/MUTOR/assets/images/unit9_equal-temperament.png" description="Equal Temperament" %}
 
 \begin{equation}
 f_n=f_r(\sqrt[12]{2})^n
