--- a/_units/09.md
+++ b/_units/09.md
@@ -61,7 +61,7 @@ The chord can easily be explained as a half-diminished seventh chord or as a Fre
 
 Since the time of J.S. Bach, equal-temperament has dominated western classical music.  In this system, every semitone is of equal size in log-frequency (remember that our perception of pitch is logarithmic).  For a given number of semitones, n, we can calculate the frequency from a reference f_r using the formula
 
-{% include img-figure url="/MUTOR/assets/images/unit9_equal-temperament.png" description="Equal Temperament" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_equal-temperament.png" description="Equal Temperament" %
 
 \begin{equation}
 f_n=f_r(\sqrt[12]{2})^n
@@ -84,7 +84,18 @@ and in just intonation,
 
 An important technique that defines common practice music is the modulation to distant keys.  As the harmony moves away from the home key, tension increases, however, in a tuning system where the tonic key is tuned near just intonation and the degree to which a key is out of tune increases with the distance from the home key, modulation to distant keys results in a higher level of tension.  In the following listening example, you will hear the first minute of a Capriccio (FbWV 506) by Johann Jakob Froberger (1616-1667) played by Gustav Leonhardt on a harpsichord tuned to Baroque pitch and in a tuning other than equal temperament (most likely meantone temperament).  In the second listening example, you will hear the same passage, but played on a piano in equal temperament.  Pay special attention to bars 7 and 8.
 
-froberger-capriccioInCmaj.mp3 
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit9_froberger-capriccioInCmaj.mp3">
+      Your browser does not support the audio element.
+    </audio>
+    <p>Demo Normal Hearing vs. High-Frequency Hearing loss</p>
+  </body>
+</html>
+
 Listening example 1.  The first minute of Capriccio (FbWV 506) by Johann Jakob Froberger played on a harpsichord in a tuning system other than equal temperament by Gustav Leonhardt.
 
 froberger-capriccioInCmaj.mid 
