--- a/_units/09.md
+++ b/_units/09.md
@@ -8,8 +8,9 @@ number: 9
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
- - author 1
-topics: [topic 1, topic 2]
+ - Georg Hajdu
+ - John MacCallum
+topics: [Scale, harmony, microtonality
 test_questions:
  - How does temperament affect harmony and harmonic progression?
  - Describe the differences and similarities between harmony and timbre.
@@ -96,22 +97,35 @@ An important technique that defines common practice music is the modulation to d
   </body>
 </html>
 
-Listening example 1.  The first minute of Capriccio (FbWV 506) by Johann Jakob Froberger played on a harpsichord in a tuning system other than equal temperament by Gustav Leonhardt.
+Listening example 1.  The first minute of Capriccio (FbWV 506) by Johann Jakob Froberger played on an organ in a tuning system other than equal temperament.
 
-froberger-capriccioInCmaj.mid 
-Listening example 2.  Froberger's Capriccio played in equal temperament.
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit9_froberger-capriccioInCmaj-temp.mp3">
+      Your browser does not support the audio element.
+    </audio>
+    <p>Demo Normal Hearing vs. High-Frequency Hearing loss</p>
+  </body>
+</html>Listening example 2.  Froberger's Capriccio played in equal temperament.
 
-froberger-capriccioInCmaj.png
+
+{% include img-figure url="/MUTOR/assets/images/unit9_froberger-capriccioInCmaj.png" description="Froberger Cappriccio C maj" %
 Figure 2.  Bars 1-12 of Capriccio (FbWV 506) by Johann Jakob Froberger.
 
 Download the following patches which will allow you to explore different tuning systems.
 
 [NOTE--THERE WILL BE TWO PATCHES HERE]
 
-ratio-to-freq-ss.png
+{% include img-figure url="/MUTOR/assets/images/unit9_ratio-to-freq-ss.png" description="" %
+
+{% include note author="vg" text="There needs to be something more current! " %}
 
 # Period Tunings
-Tunings where all thirds and fifths are just can not exist mathematically, therefore are tunings are compromises:
+A tuning where all thirds and fifths are just cannot exist mathematically, therefore all tunings such as the following are compromises:
+
 - Just-intonation tuning
 - Pythagorean tuning
 - Mean-tone tuning
@@ -120,27 +134,35 @@ Tunings where all thirds and fifths are just can not exist mathematically, there
 
 # Microtonality
 The term microtonality refers to the systematic exploration of tonal relationships that can not be derived from our tempered or quasi-tempered tuning. By comparison with the steps of the 12-tone tempered tuning (also called 12TET = "12-tone equal temperament”), in microtonal tunings deviations are smaller than 100 cents are common. Hence the term microtonality.
+
 [Scala Archive]
 
-There are two schools of thought:
+In the field microtonality, we can distinguish at least two schools of thought:
 
 ## Just Intonation
-The representatives of this movement, established by American composer Harry Partch ("Genesis of a Music"), focus on the intervals that can be derived from the overtone series and their inversion (undertone series). In the process, rather unusual intervals such as 11/7 or 7/3 come to the center of attention.
+Representatives of this movement, which American composer Harry Partch ("Genesis of a Music") had a large impact on, focus on  intervals that can be derived from the overtone series and its inversion, the undertone series. Parth refers to this as O-Tonality and U-Tonlity. In the process, rather unusual intervals such as 11/7 or 7/3 come to the center of attention.
 
-Figure Arrangement of wooden bars in Harry Partch's marimba in just intonation (11-limit)
+{% include img-figure url="/MUTOR/assets/images/unit9_Partch-Diamond.png" description="Partch Diamond" %}
+{% include note author="vg" text="What is n-limit JI? Mention JI Notation" %}
+
+Figure 3. Arrangement of the bars in Harry Partch's Diamond Marimba in 11-limit just intonation.
 
 ## Equal Temperament 
 ### Divisions of the Whole Tone
-The need for small subdivisions of the whole tone into four (24TET) and six (36TET) was already theorized and practiced at the beginning of the 20th Century (Busoni, Haba, Wishnegradsky, Ives). The Mexican composer Julian Carrillo patented in 1940 a piano with 16th notes (96TET). The 72-level, ekmelic tuning closely approximates most of the harmonic overtones, 
+The need for small subdivisions of the whole tone into four (quartertone tuning or 24-tone equal temperament [24TET] also known as equal devision of the octave in 24 steps [24EDO]) and six (36TET) was already theorized and practiced at the beginning of the 20th Century by composers such as Busoni, Haba, Wishnegradsky and Ives. The Mexican composer Julian Carrillo had a piano patented in 1940 with a keyboard in 16th notes (96TET)spanning just one octave. The 72-step "ekmelic" tuning closely approximates most of the lower harmonic overtones, 
 
 ### Other Divisions of the Octave
-53TET is derived from the layering of 53 fifths. 53 fifths correspond to 31 octaves in a very good approximation (see next slide). Interesting are also tuning systems in which a diatonic tone set exists, such as at 17TET, 19TET, 22TET, 31TET (mean-tone tuning) and 41TET. 
+53TET is derived from the stacking of 53 fifths. 53 fifths correspond to 31 octaves in a very good approximation. 
 
-These systems obey the following rule: 5 * m * s + 2 * n * s = 1200, where s is the step size of the system, and m and n are the integer factors with which s must be multiplied by to achieve a whole tone or semitone, resp. 
+Tuning systems in which a __diatonic__ pitch set exists are also interesting, such as at 17TET, 19TET (1/3 comma mean-tone tuning), 22TET, 31TET (1/4 comma mean-tone tuning) and 41TET. 
+
+These systems obey the following rule: 5 * m * s + 2 * n * s = 1200, where s is the step size of the system, and m and n are integers to be multiplied with s by to yield a diatoic whole tone or a semitone, resp. 
 
 This also applies: 5 * m + 2 * n = number of steps in the tuning. 
-The following condition should also be met: 694 cents <(3 * m + n) * s <710 cents.
 
+The following condition should also be fulfilled: 694 cents < (3 * m + n) * s < 710 cents.
+
+Examples:
 For 12TET: m = 2 and n = 1,
 For 17TET: m = 3 and n = 1,
 For 19TET: m = 3 and n = 2,
@@ -148,26 +170,33 @@ For 22TET: m = 4 and n = 1,
 For 31TET: m = 5 and n = 3,
 For 41TET: m = 7 and n = 3.
 
-Figure Calculation of the 53-step equidistant tuning in Max
+
+{% include img-figure url="/MUTOR/assets/images/unit9_53TET-in-Max.png" description="Calculation of 53TET" %}
+Figure 4. Calculation of the 53-step equidistant tuning in Max
 
 ### Divisions of Other Intervals 
-In addition to the octave, of course, other intervals can be divided. 
+The octave is a particular interval that creates a sense of unity with other other members of the same pitch class. In addition to the octave, of course, other intervals can be divided. Intervals that have been used extensively for this purpose are the just fifth (3/2) and the just twelfth (3/1), the latter bearing a close similarity to the octave. Examples are the scales (alpha, beta, gamma and delta) invented by microtonal composer Wendy Carlos and the Bohlen-Pierce scale.
+
 #### Bohlen-Pierce Scale
-An example is the Bohlen-Pierce scale, which was discovered and described in 1978 by engineer Heinz Bohlen. This scale divides the just twelfth (3: 1) into thirteen equal steps and has a tone set containing a striking number of intervals of odd ratios such as 5: 3, 7: 5, 7: 3, 9: 7 and 9: 5 , These intervals are also included in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? http://www.sfoxclarinets.com/bpclar.html.
+The Bohlen-Pierce scale, first discovered and described in 1978 by engineer Heinz Bohlen divides the just twelfth into thirteen steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without two (3,5,7 pitch lattice).
 
-Figure BP Scale
+These intervals are also included in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? http://www.sfoxclarinets.com/bpclar.html. The equal tempered version of the scale is a  matches the just one much more closely than the 5-limit just and equal tempered versions of the chromatic scale. 
 
-Figure BP Soprano Clarinet
+Figure 1. BP Scale
 
-Bohlen-Pierce Microtonality
+Figure 1. BP Soprano Clarinet
 
-#### Carlos Alpha
+##### Bohlen-Pierce Microtonality
 
 ## Other Scales
-Another class of tunings can not be classified into one group or the other. This includes the Indonesian pelog (gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used. It is likely that these tunings follows the need to minimize the sensory dissonance of the mainly inharmonic sounds of the gamelan orchestra. (The other scale commonly used in gamelan music, Slendro, is characterized by a quasi-equidistant 5-tone scale.)
+Another classes of tunings can not be classified into one group or the other. This includes the Indonesian pelog (gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used in traditional Gamelan music. According to William Sethares these instruments are tuned in such way that overall sensory dissonance of the mainly inharmonic sounds of the Gamelan orchestra reaches a minimum. Another way to smooth out the unpleasantness of the inharmonic sounds is the pair-wise performance of instruments tuned to slightly divergent pitch which creates vibrato-like beatings.
+(The other scale commonly used in gamelan music, Slendro, is characterized by a quasi-equidistant 5-tone scale.)
 
-Figure Dissonance Curve 
-Figure Gamelan Orchestra
+{% include img-figure url="/MUTOR/assets/images/unit9_Gamelan_Dissonance_Curve.png" description="Dissonance Curve for a Gamelan instrument" %}
+Figure 1. Dissonance Curve for a Gamelan instrument
+
+{% include img-figure url="/MUTOR/assets/images/unit9_Gamelan-Orchestra.png" description="A Gamelan orchestra" %}
+Figure 1. Gamelan Orchestra
 
 # Harmony in the 20th/21st Centuries
 
