--- a/_units/09.md
+++ b/_units/09.md
@@ -10,7 +10,7 @@ summary: brief summary of the unit
 authors: 
  - Georg Hajdu
  - John MacCallum
-topics: [Scale, harmony, microtonality
+topics: [Scale, harmony, microtonality]
 test_questions:
  - How does temperament affect harmony and harmonic progression?
  - Describe the differences and similarities between harmony and timbre.
