--- a/_units/09.md
+++ b/_units/09.md
@@ -52,7 +52,7 @@ Figure 1.  C major triad.
 
 In the key of C major, this chord has a feeling of stability since it is the tonic of the key.  However, in the key of F major, the same chord will sound unstable as if it should move to F.  As we can see, the context in which a chord appears is important.  Another example is the famous "Tristan chord"—the opening harmony of Richard Wagner's opera Tristan und Isolde (figure 2).  The nature of this sonority has been debated for decades, but the debate centers less around the chord itself, and more around the function and way in which it resolves.
 
-{% include img-figure url="/MUTOR/assets/images/unit9_tristan.png" description="C major chord" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_tristan.png" description="Tristan Prelude" %}
 
 Wagner_Tristan_opening.midi 
 
@@ -62,7 +62,7 @@ The chord can easily be explained as a half-diminished seventh chord or as a Fre
 
 Since the time of J.S. Bach, equal-temperament has dominated western classical music.  In this system, every semitone is of equal size in log-frequency (remember that our perception of pitch is logarithmic).  For a given number of semitones, n, we can calculate the frequency from a reference f_r using the formula
 
-{% include img-figure url="/MUTOR/assets/images/unit9_equal-temperament.png" description="Equal Temperament" %
+{% include img-figure url="/MUTOR/assets/images/unit9_equal-temperament.png" description="Equal Temperament" %}
 
 \begin{equation}
 f_n=f_r(\sqrt[12]{2})^n
@@ -119,7 +119,7 @@ Download the following patches which will allow you to explore different tuning 
 
 [NOTE--THERE WILL BE TWO PATCHES HERE]
 
-{% include img-figure url="/MUTOR/assets/images/unit9_ratio-to-freq-ss.png" description="" %
+{% include img-figure url="/MUTOR/assets/images/unit9_ratio-to-freq-ss.png" description="" %}
 
 {% include note author="vg" text="There needs to be something more current! " %}
 
