--- a/_units/09.md
+++ b/_units/09.md
@@ -112,7 +112,7 @@ Listening example 1.  The first minute of Capriccio (FbWV 506) by Johann Jakob F
 </html>Listening example 2.  Froberger's Capriccio played in equal temperament.
 
 
-{% include img-figure url="/MUTOR/assets/images/unit9_froberger-capriccioInCmaj.png" description="Froberger Cappriccio C maj" %
+{% include img-figure url="/MUTOR/assets/images/unit9_froberger-capriccioInCmaj.png" description="Froberger Cappriccio C maj" %}
 Figure 2.  Bars 1-12 of Capriccio (FbWV 506) by Johann Jakob Froberger.
 
 Download the following patches which will allow you to explore different tuning systems.
